--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ async function buildStrip() {
   if (frame === "minimal") logoFile = "dari-logo-filled.png";
   if (frame === "signature") logoFile = "dari-logo-outline-transparent.png";
 
-  const textColor = (frame === "signature") ? "#000000" : "#374139";
+  const textColor = (frame === "signature") ? "#ffffff" : "#374139";
 
   const now = new Date();
   const dateStr = now.toLocaleDateString("en-US", {
