--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       color: #222;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
+      /* overflow: hidden;  <-- removed so QR/page bottom won't be clipped */
     }
 
     header {
@@ -52,6 +52,7 @@
       align-items: stretch;
       padding: 8px;
       box-sizing: border-box;
+      overflow-y: auto;  /* allow vertical scroll if QR/strip is tall */
     }
 
     .app {
@@ -214,7 +215,7 @@
     /* QR panel – small & only when needed */
     #qrPanel {
       display: none;
-      margin: 6px auto 0;
+      margin: 6px auto 12px;
       padding: 10px;
       background: white;
       border-radius: 10px;
